hero image on small screens issue

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -18,6 +18,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    margin: auto;  /* for mobile screen ?? maybe*/
 }
 
 .hero-title {
